Adding ElideAsyncTransfersPass to try to remove redundant transfers. These transfers can arise during stream conversion if there was ambiguity in the source IR.

--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
@@ -21,6 +21,7 @@ iree_compiler_cc_library(
         "ConvertToStream.cpp",
         "DumpStatistics.cpp",
         "ElideAsyncCopies.cpp",
+        "ElideAsyncTransfers.cpp",
         "ElideTimepoints.cpp",
         "EmplaceAllocations.cpp",
         "EncodeTensors.cpp",
