[Encoding][NFC] Move non attribute implementation to EncodingTypes.cpp (#20045)
It follows the convention, which only put the attribute implementation
and local functions to EncodingAttr.cpp. The implementation of other
utilities is moved to EncodingTypes.cpp.

Additionally, it spells out the types for `auto`.

---------

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/Encoding/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Encoding/IR/BUILD.bazel
@@ -50,6 +50,7 @@ iree_compiler_cc_library(
         "EncodingOps.cpp",
         "EncodingOps.cpp.inc",
         "EncodingTypeInterfaces.cpp.inc",
+        "EncodingTypes.cpp",
         "EncodingTypes.cpp.inc",
     ],
     hdrs = [
