--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
@@ -18,6 +18,7 @@ iree_compiler_cc_library(
         "AnnotateAffinities.cpp",
         "AnnotateDispatchArguments.cpp",
         "AnnotateDispatchAssumptions.cpp",
+        "CloneToConsumers.cpp",
         "ConvertToStream.cpp",
         "DumpStatistics.cpp",
         "ElideAsyncCopies.cpp",
