[AMDGPU] Make fp8 support checks chipset-specific, check shaped types (#20152)
With RDNA4, we now have cards that allow the OCP FP8 formats (f8E5M2 and
f8E4M3FN). This means that the previous check that caused any module
that used those formats to be rejected needs to be relaxed.

However, the backend uses the same intrinsics for the gfx942-only FNUZ
types and the OCP types. Therefore, the data type validity check needs
to be aware of the chipset being targetted in order to validate that the
dispatch can be compiled correctly. This patch implements this improved
set of checks.

In addition, it adds tests for these checks (sadly, we can't used
expected-error here because the pipeline scrips debug info) and improves
these checks to also look inside vector<> and memref<>.

(This also means that there is now an IREE-side mechanism to reject
compiling FP8 code pre-gfx942.)

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/test/ROCDL/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/test/ROCDL/BUILD.bazel
@@ -26,6 +26,8 @@ iree_lit_test_suite(
             "config_vector_distribute_reduction_gfx942.mlir",
             "config_user_vector_distribute.mlir",
             "lowering_scalar_dispatch.mlir",
+            "pipeline_elementwise_f8fnuz.mlir",
+            "pipeline_elementwise_f8ocp.mlir",
             "pipeline_igemm_tile_and_fuse.mlir",
             "pipeline_tile_and_fuse.mlir",
             "pipeline_vector_distribute_gfx942.mlir",
@@ -39,5 +41,6 @@ iree_lit_test_suite(
     tools = [
         "//tools:iree-opt",
         "@llvm-project//llvm:FileCheck",
+        "@llvm-project//llvm:not",
     ],
 )
