--- a/tests/e2e/matmul/BUILD.bazel
+++ b/tests/e2e/matmul/BUILD.bazel
@@ -640,4 +640,4 @@ iree_generated_e2e_runner_test(
     ("f32", "f32"),
 ]]
 
-# TODO(#19465): add large matmul tests for rdna3.
+# TODO(#19465): add large matmul tests for rdna3 and rdna4.
