Improve im2col conversion to handle permuted filter and output maps (#20150)
The orginal generic im2col implementation assumed that the filter and
output affine map would not have permutations. While this is true in
most named ops, it is not necessarily required. See for example
https://github.com/llvm/llvm-project/pull/129547 where it was not the
case for `conv_3d_ncdhw_fcdhw` . While in this case we just "normalized"
the map upstream, this PR adds support for such maps directly.
Fixes :   https://github.com/iree-org/iree/issues/20139

---------

Signed-off-by: Nirvedh Meshram <nirvedh@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
@@ -30,8 +30,8 @@ iree_gentbl_cc_library(
 iree_compiler_cc_library(
     name = "Transforms",
     srcs = [
-        "ConvertConv2DToIm2ColOp.cpp",
         "ConvertConv2DToWinograd.cpp",
+        "ConvertConvToIm2ColOp.cpp",
         "ConvertToLoops.cpp",
         "DecomposeAttention.cpp",
         "DecomposeIm2col.cpp",
