--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/test/BUILD.bazel
@@ -16,8 +16,8 @@ iree_lit_test_suite(
     name = "lit",
     srcs = enforce_glob(
         [
-            "conv2d_to_im2col.mlir",
             "conv2d_to_winograd.mlir",
+            "conv_to_im2col.mlir",
             "convert_to_loops.mlir",
             "convert_to_online_attention.mlir",
             "decompose_im2col.mlir",
