Validate against some uses of uninitialized values. (#20177)
Undefined behavior when inadvertently consuming uninitialized values in
linalg ops is a recurring cause of confusion, as in a user thread today
on Discord.

Also, this PR fixes one instance of that in our own tests.

---------

Signed-off-by: Benoit Jacob <jacob.benoit.1@gmail.com>

--- a/compiler/src/iree/compiler/GlobalOptimization/BUILD.bazel
+++ b/compiler/src/iree/compiler/GlobalOptimization/BUILD.bazel
@@ -67,6 +67,7 @@ iree_compiler_cc_library(
         "RemoveZeroExtentTensors.cpp",
         "SimplifyPackUnpack.cpp",
         "Utils.cpp",
+        "WarnOnUninitializedValues.cpp",
     ],
     hdrs = [
         "Passes.h",
