--- a/compiler/src/iree/compiler/GlobalOptimization/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/GlobalOptimization/test/CMakeLists.txt
@@ -34,6 +34,7 @@ iree_lit_test_suite(
     "remove_zero_extent_tensors.mlir"
     "transformation_pipeline.mlir"
     "transpose_and_decompose_concat.mlir"
+    "warn_on_uninitialized_values.mlir"
   TOOLS
     FileCheck
     iree-opt
