--- a/compiler/src/iree/compiler/GlobalOptimization/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/GlobalOptimization/test/BUILD.bazel
@@ -36,6 +36,7 @@ iree_lit_test_suite(
             "remove_zero_extent_tensors.mlir",
             "transformation_pipeline.mlir",
             "transpose_and_decompose_concat.mlir",
+            "warn_on_uninitialized_values.mlir",
         ],
         include = ["*.mlir"],
     ),
