--- a/.github/workflows/pkgci_test_amd_mi300.yml
+++ b/.github/workflows/pkgci_test_amd_mi300.yml
@@ -21,7 +21,7 @@ jobs:
   test_mi300:
     runs-on: linux-mi300-gpu-1
     container:
-      image: rocm/dev-ubuntu-22.04:6.3
+      image: ghcr.io/iree-org/rocm_ubuntu_jammy@sha256:54aaf6cb8913a4c33c9504e19c393569e0eb64a8638659992c756a06275bf961
       options: --user root --device=/dev/kfd --device=/dev/dri --ipc=host --group-add video --cap-add=SYS_PTRACE --security-opt seccomp=unconfined
     env:
       PACKAGE_DOWNLOAD_DIR: ${{ github.workspace }}/.packages
@@ -35,10 +35,6 @@ jobs:
       IREE_HIP_ENABLE: 1
       IREE_HIP_TEST_TARGET_CHIP: "gfx942"
     steps:
-      - name: "Install dependencies"
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y cmake ninja-build clang lld git
       - name: Check out repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
