Fix pkgci workflows to be directly triggerable, skipping build_packages. (#20190)
This allows PkgCI workflows to be run via workflow_dispatch without
waiting for the build_packages job each run. This was all designed for
this usage but it wasn't _quite_ working before.

I also added new documentation explaining the process.

Tested here:
* https://github.com/iree-org/iree/actions/runs/13725659765
* https://github.com/iree-org/iree/actions/runs/13725761053

--- a/.github/workflows/pkgci_regression_test.yml
+++ b/.github/workflows/pkgci_regression_test.yml
@@ -58,6 +58,7 @@ jobs:
       PACKAGE_DOWNLOAD_DIR: ${{ github.workspace }}/.packages
       IREE_TEST_PATH_EXTENSION: ${{ github.workspace }}/build_tools/pkgci/external_test_suite
       VENV_DIR: ${{ github.workspace }}/venv
+      GH_TOKEN: ${{ github.token }}
       TEST_OUTPUT_ARTIFACTS: ${{ github.workspace }}/model_output_artifacts
     steps:
       - name: Checking out IREE repository
@@ -69,6 +70,7 @@ jobs:
           # Must match the subset of versions built in pkgci_build_packages.
           python-version: "3.11"
       - uses: actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806 # v4.1.9
+        if: ${{ inputs.artifact_run_id == '' }}
         with:
           name: linux_x86_64_release_packages
           path: ${{ env.PACKAGE_DOWNLOAD_DIR }}
