E2E tests for math ops. (#20169)
This is thought to be needed before going ahead with a batch of math ops
codegen changes
(https://github.com/iree-org/iree/pull/19970#pullrequestreview-2649328491)
and this also discovered a few bugs:
https://github.com/iree-org/iree/issues/20163
https://github.com/iree-org/iree/issues/20164
https://github.com/iree-org/iree/issues/20165.

Signed-off-by: Benoit Jacob <jacob.benoit.1@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -568,6 +568,7 @@ include(iree_cc_binary_benchmark)
 include(iree_hal_cts_test_suite)
 include(iree_static_linker_test)
 include(iree_plugin_register)
+include(iree_genrule)
 
 # Default any sub-tree which doesn't provide its own package namespacing
 # to derive it relative to this directory and prefixed with iree/.
