Add `iree-opt-level` and per-pipeline optimization flags (#20047)
This change adds support for optimization flags that can be used to
broadly control compiler optimizations. `iree-opt-level` is
the name of the flag that would control the overall optimization level
for the compiler invocation and it would cascade down to more
fine-grained flags (i.e. `iree-opt-strip-assertions`). This will give
users an easy way to control the compilation process and reduce the
number of flags required to get the desired optimizations.

Progress towards https://github.com/iree-org/iree/issues/19072

---------

Signed-off-by: Ian Wood <ianwood2024@u.northwestern.edu>

--- a/tools/test/BUILD.bazel
+++ b/tools/test/BUILD.bazel
@@ -21,12 +21,14 @@ iree_lit_test_suite(
         [
             "benchmark_flags.txt",
             "compile_pipelines.mlir",
+            "compile_flags.mlir",
             "compile_to_continuation.mlir",
             "compile_to_phase.mlir",
             "executable_benchmarks.mlir",
             "executable_configurations.mlir",
             "executable_sources.mlir",
             "iree-benchmark-executable.mlir",
+            "iree-compile-help.txt",
             "iree-benchmark-module.mlir",
             "iree-convert-parameters.txt",
             "iree-dump-parameters.txt",
