--- a/tools/test/CMakeLists.txt
+++ b/tools/test/CMakeLists.txt
@@ -15,6 +15,7 @@ iree_lit_test_suite(
     lit
   SRCS
     "benchmark_flags.txt"
+    "compile_flags.mlir"
     "compile_pipelines.mlir"
     "compile_to_continuation.mlir"
     "compile_to_phase.mlir"
@@ -23,6 +24,7 @@ iree_lit_test_suite(
     "executable_sources.mlir"
     "iree-benchmark-executable.mlir"
     "iree-benchmark-module.mlir"
+    "iree-compile-help.txt"
     "iree-convert-parameters.txt"
     "iree-dump-parameters.txt"
     "iree-run-mlir.mlir"
