--- a/compiler/src/iree/compiler/Utils/unittests/BUILD.bazel
+++ b/compiler/src/iree/compiler/Utils/unittests/BUILD.bazel
@@ -19,6 +19,7 @@ iree_compiler_cc_test(
         "//compiler/src/iree/compiler/Utils",
         "//compiler/src/iree/testing:gtest_main",
         "@com_google_googletest//:gtest",
+        "@llvm-project//llvm:Passes",
         "@llvm-project//llvm:Support",
     ],
 )
