--- a/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
@@ -39,6 +39,7 @@ iree_compiler_cc_library(
         "SplitReduction.cpp",
         "TensorPadToTensorInsertSlice.cpp",
         "TransposeGenericOps.cpp",
+        "WrapEncodingOpInDispatchRegion.cpp",
     ],
     hdrs = [
         "FusionUtils.h",
