--- a/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
@@ -48,6 +48,7 @@ iree_lit_test_suite(
             "split_reduction.mlir",
             "tensor_pad_to_tensor_insert_slice.mlir",
             "transpose_generic_ops.mlir",
+            "wrap_encoding_op_in_dispatch_region.mlir",
         ],
         include = ["*.mlir"],
     ),
