Fix libdevice `iree_f2h_ieee` conversion (#20248)
This replaces the implementation with a specialized copy of the code we
have in base/internal/math.h.

This also adds an extensive test, so that we can feel better about this
code which isn't shared with anything else (being libdevice) and is
relatively little used, being used only with workloads involving the
CPU-hostile f16 type, and only on CPU targets lacking native f16-f32
conversion instructions, which is generally only `generic` CPU targets
as contemporary CPUs tend to have native instructions for these f16-f32
(F16C extension on x86) even though they lack native f16 *arithmetic*
beyond these conversions.

Fixes #20163.

---------

Signed-off-by: Benoit Jacob <jacob.benoit.1@gmail.com>

--- a/runtime/src/iree/builtins/device/tools/BUILD.bazel
+++ b/runtime/src/iree/builtins/device/tools/BUILD.bazel
@@ -29,6 +29,7 @@ iree_runtime_cc_test(
     srcs = ["libdevice_test.cc"],
     deps = [
         "//runtime/src/iree/base",
+        "//runtime/src/iree/base/internal",
         "//runtime/src/iree/base/internal:flags",
         "//runtime/src/iree/builtins/device",
         "//runtime/src/iree/testing:gtest",
