[Preprocessing] Form single dispatch programs. (#20265)
The `MakeSingleDispatchForFunction` pass was an initial attempt to move
the entire program into a single dispatch. It was fairly basic and didnt
account for ABI etc. This PR changes the logic of the pass to find the
core computation of the function using slices and ignores ABI related
operations (and some additional ones).

The pass would previously handle multiple basic-blocks. We should be
able to handle them with the new approach, but needs some iteration on
how the upstream slicing utilities can be used in that context. Dropping
support for that for now, and will be revisited later. This pass is not
really used anywhere, so this "support" is not very meaningful.

---------

Signed-off-by: MaheshRavishankar <mahesh.ravishankar@gmail.com>

--- a/compiler/src/iree/compiler/Preprocessing/BUILD.bazel
+++ b/compiler/src/iree/compiler/Preprocessing/BUILD.bazel
@@ -21,6 +21,7 @@ iree_compiler_cc_library(
         "Passes.h",
     ],
     deps = [
+        "//compiler/src/iree/compiler/Dialect/LinalgExt/IR",
         "//compiler/src/iree/compiler/Dialect/Util/IR",
         "//compiler/src/iree/compiler/DispatchCreation",
         "//compiler/src/iree/compiler/GlobalOptimization",
@@ -29,9 +30,12 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Preprocessing/Common:Transforms",
         "//compiler/src/iree/compiler/Utils",
         "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:Analysis",
         "@llvm-project//mlir:ArithDialect",
+        "@llvm-project//mlir:IR",
         "@llvm-project//mlir:LinalgTransforms",
         "@llvm-project//mlir:Pass",
+        "@llvm-project//mlir:TensorDialect",
         "@llvm-project//mlir:Transforms",
     ],
 )
