--- a/compiler/src/iree/compiler/Preprocessing/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Preprocessing/CMakeLists.txt
@@ -19,10 +19,14 @@ iree_cc_library(
     "Passes.cpp"
   DEPS
     LLVMSupport
+    MLIRAnalysis
     MLIRArithDialect
+    MLIRIR
     MLIRLinalgTransforms
     MLIRPass
+    MLIRTensorDialect
     MLIRTransforms
+    iree::compiler::Dialect::LinalgExt::IR
     iree::compiler::Dialect::Util::IR
     iree::compiler::DispatchCreation
     iree::compiler::GlobalOptimization
