[Preprocessing] Apply a pass-pipeline based on attributes on func-like ops. (#20287)
This PR adds a new mechanism for running some preprocessing passes on
func-like ops. This is done by use of a new attribute
`preprocessing-passpipeline` which has the textual representation of the
pass-pipeline to run. It is expected that the textual representation is
for a pass-manager already nested on a func-like op.

---------

Signed-off-by: MaheshRavishankar <mahesh.ravishankar@gmail.com>

--- a/compiler/src/iree/compiler/Preprocessing/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Preprocessing/Common/test/BUILD.bazel
@@ -16,6 +16,7 @@ iree_lit_test_suite(
     name = "lit",
     srcs = enforce_glob(
         [
+            "attr_based_pipeline.mlir",
             "conv2d_to_img2col.mlir",
             "conv_filter_to_channels_last.mlir",
             "conv_to_channels_last.mlir",
