--- a/compiler/src/iree/compiler/PluginAPI/Config/BUILD.bazel
+++ b/compiler/src/iree/compiler/PluginAPI/Config/BUILD.bazel
@@ -22,6 +22,7 @@ genrule(
         "echo '" +
         "HANDLE_PLUGIN_ID(hal_target_cuda)\n" +
         "HANDLE_PLUGIN_ID(hal_target_llvm_cpu)\n" +
+        "HANDLE_PLUGIN_ID(hal_target_local)\n" +
         "HANDLE_PLUGIN_ID(hal_target_metal_spirv)\n" +
         "HANDLE_PLUGIN_ID(hal_target_rocm)\n" +
         "HANDLE_PLUGIN_ID(hal_target_vmvx)\n" +
@@ -48,6 +49,7 @@ iree_compiler_cc_library(
         # For now, we just hard include all in-tree plugins.
         "//compiler/plugins/target/CUDA",
         "//compiler/plugins/target/LLVMCPU",
+        "//compiler/plugins/target/Local",
         "//compiler/plugins/target/MetalSPIRV",
         "//compiler/plugins/target/ROCM",
         "//compiler/plugins/target/VMVX",
