[Codegen][ROCDL] Use buffer fat pointers where possible (#19918)
This commit enables using the `#amdgpu.address_space<fat_raw_buffer>`
address space for memref subspans in our kernels in cases where it's
safe to do so. This both gains us immediate performance improvements
(-2ms on unet) and enables further performance improvements on MI-300
through the use of the cache swizzling mechanism.

Note: this PR currently depends on a bunch of open upstream work.

# Context

AMD GPUs, on top of having normal `global_{load,store,...}_T`
instructions, which take a 64-bit pointer, also have `buffer_*`
instructions, which use the texture unit to enable more complex logic.

These instructions, for our purposes, take a "buffer resource" (a base
pointer into global memory + flags) and an offset. The resource takes 4
**scalar** registers (and thus must be wave-uniform) and the offset is 1
**vector** register, which is added to the base pointer to form the
effective address of the buffer access.

This means that we can use these buffer operations if we can be assured
that the non-uniform part of our accesses never exceeds 2 GB from the
start of whatever we decide the base pointer is.

IREE will often pass in N copies of the same pointer and then take
global offsets from that pointer to locate the logical bindings/tensors
within the model's data. Fortunately, these offsets are globally
uniform.

Therefore, we can conservatively construct buffer descriptors by finding
the start of a given bound tensor/memref (which is always in a
contiguous layout) and using that as a base pointer. Then, if we know
that the memref is 2 GB or smaller, we can use the buffer instructions
to access it.

# How this patch works

1. Before bufferization, we run iree-rocdl-configure-buffer-instructions
/ ROCDLConfigureBufferInstructions , which will annotate
`hal.interface.binding.subspan` operations with the key `
iree_gpu.use_rocdl_buffer_instructions` as a discardable attribute on
the subspans *if* we can 

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -205,6 +205,7 @@ iree_compiler_cc_library(
         "//llvm-external-projects/iree-dialects:IREELinalgTransformDialect",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:AMDGPUDialect",
+        "@llvm-project//mlir:AMDGPUTransforms",
         "@llvm-project//mlir:AMDGPUUtils",
         "@llvm-project//mlir:AffineAnalysis",
         "@llvm-project//mlir:AffineDialect",
