--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/test/ROCDL/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/test/ROCDL/BUILD.bazel
@@ -25,6 +25,7 @@ iree_lit_test_suite(
             "config_vector_distribute_gfx942.mlir",
             "config_vector_distribute_reduction_gfx942.mlir",
             "config_user_vector_distribute.mlir",
+            "configure_buffer_instructions.mlir",
             "lowering_scalar_dispatch.mlir",
             "pipeline_elementwise_f8fnuz.mlir",
             "pipeline_elementwise_f8ocp.mlir",
