--- a/compiler/src/iree/compiler/Codegen/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Utils/CMakeLists.txt
@@ -30,6 +30,7 @@ iree_cc_library(
   DEPS
     LLVMSupport
     LLVMTargetParser
+    MLIRAMDGPUDialect
     MLIRAffineDialect
     MLIRAnalysis
     MLIRArithDialect
