Moving func-to-util patterns to Util/Conversion/. (#20262)
There still exists some weird interplay between dialect conversion,
nested modules, and somehow VMVX - this refactoring mostly moves code
into the right places but does not attempt to untangle that madness just
yet.

--- a/compiler/src/iree/compiler/InputConversion/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/InputConversion/Common/CMakeLists.txt
@@ -68,6 +68,8 @@ iree_cc_library(
     iree::compiler::Dialect::Flow::IR
     iree::compiler::Dialect::Flow::Transforms
     iree::compiler::Dialect::HAL::IR
+    iree::compiler::Dialect::Util::Conversion
+    iree::compiler::Dialect::Util::Conversion::FuncToUtil
     iree::compiler::Dialect::Util::IR
     iree::compiler::Dialect::Util::Transforms
     iree::compiler::Pipelines::Options
