Run `windows_x64_msvc` on postsubmit and opt-in on presubmit. (#20306)
Progress on https://github.com/iree-org/iree/issues/18813.

We've used this CI configuration before, but workflow refactoring and
runner migrations brought us to a point where there were no longer any
jobs that were a reasonable fit for `push` events, instead only running
either on all commits (`push` and `pull_request`) or once a day on
`schedule`. We may be at a point now where we have capacity (and budget)
to run on `push` and opt-in on `pull_request`.

Specifically for developers, this workflow will now run:

* On every `push` to `main`
* On every PR that modifies `win32`, `windows`, or `msvc` file paths
* On every PR that looks like an LLVM integrate:
    
    ```
LLVM_INTEGRATE_TITLE_PATTERN = re.compile("^integrate|bump.+llvm",
re.IGNORECASE)
    LLVM_INTEGRATE_BRANCH_PATTERN = re.compile(
"integrates/llvm|bump-llvm|llvm-bump|integrate-llvm", re.IGNORECASE
    )
    LLVM_INTEGRATE_LABEL = "llvm-integrate"
    ```
* On every PR that uses the `ci-extra: windows_x64_msvc` git trailer

Tested:
* With ci-exactly
https://github.com/iree-org/iree/actions/runs/13934752143?pr=20306
* With no git trailers:
https://github.com/iree-org/iree/actions/runs/13955504318?pr=20306
    
    ```
    Parsing workflow file: '.github/workflows/ci.yml'.
Enabling 'windows_x64_msvc' since
'.github/workflows/ci_windows_x64_msvc.yml' matches pattern '*windows*'
Enabling 'windows_x64_msvc' since
'.github/workflows/ci_windows_x64_msvc.yml' matches pattern '*msvc*'
Setting outputs: {'enabled-jobs': '["linux_x64_bazel",
"linux_x64_clang", "linux_x64_clang_asan", "runtime", "runtime_small",
"runtime_tracing", "windows_x64_msvc"]', 'is-pr': 'true',
'write-caches': '0'}
    ```

---------

Signed-off-by: Scott Todd <scott.todd0@gmail.com>

--- a/.github/workflows/ci_windows_x64_msvc.yml
+++ b/.github/workflows/ci_windows_x64_msvc.yml
@@ -7,21 +7,11 @@
 name: CI - Windows x64 MSVC
 
 on:
-  schedule:
-    # Weekday mornings at 09:15 UTC = 01:15 PST (UTC - 8).
-    - cron: "15 9 * * 1-5"
+  workflow_call:
   workflow_dispatch:
-
-concurrency:
-  # A PR number if a pull request and otherwise the commit hash. This cancels
-  # queued and in-progress runs for the same PR (presubmit) or commit
-  # (postsubmit)
-  group: ${{ github.workflow }}-${{ github.event.number || github.sha }}
-  cancel-in-progress: true
 
 jobs:
   windows_x64_msvc:
-    if: ${{ github.repository_owner == 'iree-org' || github.event_name != 'schedule' }}
     runs-on: azure-windows-scale
     env:
       BASE_BUILD_DIR_POWERSHELL: C:\mnt\azure\b
@@ -74,10 +64,4 @@ jobs:
         if: always()
         run: if (Test-Path -Path "$Env:BUILD_DIR_POWERSHELL") {Remove-Item -Path "$Env:BUILD_DIR_POWERSHELL" -Recurse -Force}
 
-      - name: Post to Discord on Failure
-        uses: sarisia/actions-status-discord@5ddd3b114a98457dd80a39b2f00b6a998cd69008 # v1.15.3
-        if: failure() && github.ref_name == 'main' && github.repository_owner == 'iree-org'
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          description: "The ${{ github.workflow }} workflow failed"
-          url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}"
+      # Alerting on failure is the responsibility of the calling job.
