Revert recent Windows CI changes, moving back to nightly only. (#20342)
"Progress" on https://github.com/iree-org/iree/issues/18813. This
reverts https://github.com/iree-org/iree/pull/20306 and
https://github.com/iree-org/iree/pull/20338.

The current runners are not configured to run concurrent jobs
efficiently so this workflow is too unstable.

--- a/.github/workflows/ci_windows_x64_msvc.yml
+++ b/.github/workflows/ci_windows_x64_msvc.yml
@@ -7,18 +7,21 @@
 name: CI - Windows x64 MSVC
 
 on:
-  workflow_call:
+  schedule:
+    # Weekday mornings at 09:15 UTC = 01:15 PST (UTC - 8).
+    - cron: "15 9 * * 1-5"
   workflow_dispatch:
 
 concurrency:
-  # Limit to only one run at a time on our current self-hosted Windows runners.
-  # The network mount and build dir technically functions with concurrent jobs
-  # but performance degrades to the point of being unusably slow.
-  group: ${{ github.workflow }}
-  cancel-in-progress: false
+  # A PR number if a pull request and otherwise the commit hash. This cancels
+  # queued and in-progress runs for the same PR (presubmit) or commit
+  # (postsubmit)
+  group: ${{ github.workflow }}-${{ github.event.number || github.sha }}
+  cancel-in-progress: true
 
 jobs:
   windows_x64_msvc:
+    if: ${{ github.repository_owner == 'iree-org' || github.event_name != 'schedule' }}
     runs-on: azure-windows-scale
     env:
       BASE_BUILD_DIR_POWERSHELL: C:\mnt\azure\b
@@ -31,7 +34,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           submodules: true
-      # TODO(#18813): Remove this. Environment setup needs to happen on runners, not in workflows.
       - name: "Create build dir"
         run: |
           $currentTime = (Get-Date).ToString('HHmmss')
@@ -51,8 +53,6 @@ jobs:
           python3 -m venv .venv
           .venv/Scripts/activate.bat
           python3 -m pip install -r runtime/bindings/python/iree/runtime/build_requirements.txt
-      # TODO(#18813): Fix to actually use either ccache or sccache.
-      #               Not need to install both, and neither is currently used.
       - name: "Installing requirements"
         run: choco install ccache --yes
       - name: "Configuring MSVC"
@@ -74,4 +74,10 @@ jobs:
         if: always()
         run: if (Test-Path -Path "$Env:BUILD_DIR_POWERSHELL") {Remove-Item -Path "$Env:BUILD_DIR_POWERSHELL" -Recurse -Force}
 
-      # Alerting on failure is the responsibility of the calling job.
+      - name: Post to Discord on Failure
+        uses: sarisia/actions-status-discord@5ddd3b114a98457dd80a39b2f00b6a998cd69008 # v1.15.3
+        if: failure() && github.ref_name == 'main' && github.repository_owner == 'iree-org'
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          description: "The ${{ github.workflow }} workflow failed"
+          url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}"
