--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
@@ -31,6 +31,7 @@ iree_compiler_cc_library(
         "LayoutSlices.cpp",
         "MaterializeBuiltins.cpp",
         "MaterializeCopyOnWrite.cpp",
+        "MaterializeEncodings.cpp",
         "PackConstants.cpp",
         "PackDispatchOperands.cpp",
         "Passes.cpp",
