--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
@@ -40,6 +40,7 @@ iree_lit_test_suite(
             "layout_slices.mlir",
             "materialize_builtins.mlir",
             "materialize_copy_on_write.mlir",
+            "materialize_encodings.mlir",
             "pack_constants.mlir",
             "pack_dispatch_operands.mlir",
             "propagate_subviews.mlir",
