--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/CMakeLists.txt
@@ -38,6 +38,7 @@ iree_lit_test_suite(
     "layout_slices.mlir"
     "materialize_builtins.mlir"
     "materialize_copy_on_write.mlir"
+    "materialize_encodings.mlir"
     "pack_constants.mlir"
     "pack_dispatch_operands.mlir"
     "propagate_subviews.mlir"
