[DispatchCreation] Convert top-level encoding ops to flow.tensor.encode. (#20300)
The revision deletes the `WrapEncodingOpInDispatchRegionPass` and
converts the encoding ops into `flow.tensor.encode` ops directly.

It is a step towards https://github.com/iree-org/iree/issues/20187

---------

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
@@ -21,6 +21,7 @@ iree_compiler_cc_library(
         "CollapseDimensions.cpp",
         "CollapseReductionDimensions.cpp",
         "ConvertDispatchRegionsToWorkgroups.cpp",
+        "ConvertEncodingToFlow.cpp",
         "ConvertTensorToFlow.cpp",
         "ElementwiseOpFusion.cpp",
         "FoldUnitExtentDims.cpp",
@@ -39,7 +40,6 @@ iree_compiler_cc_library(
         "SplitReduction.cpp",
         "TensorPadToTensorInsertSlice.cpp",
         "TransposeGenericOps.cpp",
-        "WrapEncodingOpInDispatchRegion.cpp",
     ],
     hdrs = [
         "FusionUtils.h",
