Only build elf_module_test when IREE_BUILD_TESTS is ON (#20351)
Signed-off-by: Letu Ren <fantasquex@gmail.com>

--- a/runtime/src/iree/hal/local/elf/BUILD.bazel
+++ b/runtime/src/iree/hal/local/elf/BUILD.bazel
@@ -46,6 +46,7 @@ iree_runtime_cc_library(
 
 iree_runtime_cc_binary(
     name = "elf_module_test_binary",
+    testonly = True,
     srcs = ["elf_module_test_main.c"],
     deps = [
         ":elf_module",
