Move sharktank and regression-test MI300 jobs to the ossci cluster. (#20359)
Progress on https://github.com/nod-ai/shark-ai/issues/793.

This moves the sharktank and regression-test workflow jobs using MI300
runners to the ossci cluster.

ci-exactly: build_packages,regression_test,test_sharktank

---------

Signed-off-by: Elias Joseph <eljoseph@amd.com>
Co-authored-by: Elias Joseph <eljoseph@amd.com>

--- a/.github/workflows/pkgci_regression_test.yml
+++ b/.github/workflows/pkgci_regression_test.yml
@@ -48,7 +48,7 @@ jobs:
             rocm-chip: gfx942
             backend: rocm
             sku: mi300
-            runs-on: nodai-amdgpu-mi300-x86-64
+            runs-on: linux-mi300-1gpu-ossci-iree-org
           - name: amdgpu_rocm_mi308_gfx942
             rocm-chip: gfx942
             backend: rocm
@@ -90,6 +90,13 @@ jobs:
       #     pytest \
       #       -rA -s -m "plat_host_cpu and presubmit" \
       #       experimental/regression_suite
+
+      - name: "Set IREE_TEST_FILES variable"
+        run: |
+          case "${{ matrix.name }}" in
+            "amdgpu_rocm_mi300_gfx942") echo IREE_TEST_FILES="/shark-cache/data/iree-regression-cache" >> $GITHUB_ENV ;;
+            *) echo "No cache directory assigned for ${{ matrix.name }}" ;;
+          esac
 
       - name: "Running SDXL special model tests"
         if: "!cancelled()"
