--- a/.github/workflows/pkgci_test_sharktank.yml
+++ b/.github/workflows/pkgci_test_sharktank.yml
@@ -30,10 +30,15 @@ jobs:
             gpu: none
             runs-on: ubuntu-24.04
 
-          - name: rocm_hip
+          - name: rocm_hip_w7900
             target: target_hip
             gpu: gfx1100
             runs-on: nodai-amdgpu-w7900-x86-64
+
+          - name: rocm_hip_mi300
+            target: target_hip
+            gpu: gfx942
+            runs-on: linux-mi300-2gpu-ossci-iree-org
 
     env:
       VENV_DIR: ${{ github.workspace }}/venv
